--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   },
   "homepage": "https://github.com/robe179/back-end-polython-2019#readme",
   "dependencies": {
-    "dialogflow": "^0.8.0",
     "express": "^4.16.4",
-    "request-json": "^0.6.4",
-    "uuid": "^3.3.2"
+    "request-json": "^0.6.4"
   }
 }
